[project]
name = "network-scanner-uv"
version = "0.1.0"
description = "Fast Network Scanner with FastAPI and uv package management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Baharak Qaderi", email = "baharak.qaderi@example.com"}
]
keywords = ["network", "scanner", "fastapi", "uv", "async", "docker"]
homepage = "https://github.com/BaharakQaderi/network-scanner-uv"
repository = "https://github.com/BaharakQaderi/network-scanner-uv"
documentation = "https://github.com/BaharakQaderi/network-scanner-uv#readme"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-nmap>=0.7.1",
    "netifaces>=0.11.0",
    "scapy>=2.6.1",
]

[tool.setuptools.packages.find]
where = ["app", "cli"]
exclude = ["config*", "static*", "docs*"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
